@@ -19,9 +19,10 @@ perl_version 5.008;
 readme_from 'Password.pm';
 recursive_author_tests('xt');
 requires 'Plack::Component::Tags::HTML' => 0.15;
+requires 'Plack::Session' => 0;
 requires 'Plack::Util::Accessor' => 0;
 requires 'Tags::HTML::Container' => 0;
-requires 'Tags::HTML::Login::Access' => 0;
+requires 'Tags::HTML::Login::Access' => 0.03;
 resources 'bugtracker' => 'https://github.com/michal-josef-spacek/Plack-App-Login-Password/issues';
 resources 'homepage' => 'https://github.com/michal-josef-spacek/Plack-App-Login-Password';
 resources 'repository' => 'git://github.com/michal-josef-spacek/Plack-App-Login-Password';
