@@ -1,4 +1,5 @@
 0.02
+ - Add support of messages.
  - Improve constructor parameters in doc.
  - Update tests to independent of package version.
  - Update minimal version of Plack::Component::Tags::HTML to 0.15.
